# gchg

./: .clang-format  .gitignore  CMakeLists.txt  cmake-format.json  readme.md
app/: CMakeLists.txt  main.cpp
cmake/: default_visibility.cmake  developer_mode.cmake  install_structure.cmake  installation.cmake  output_structure.cmake  packaging.cmake
cmake/compiler_flags/: cxx_iso_flags.cmake  cxx_standard.cmake  ipo_support.cmake
dependencies/: CMakeLists.txt
dependencies/cxxopts/: CMakeLists.txt
dependencies/doctest/: CMakeLists.txt
lib/: CMakeLists.txt
lib/include/: CMakeLists.txt
lib/include/gchg/: CMakeLists.txt  days.hpp  html.hpp  months.hpp  table.hpp  test_api.hpp  weeks.hpp  years.hpp
lib/src/: CMakeLists.txt  days.cpp  html.cpp  months.cpp  table.cpp  weeks.cpp  years.cpp
tests/: CMakeLists.txt  weeks.cpp  years.cpp
